2015-08-11 Michele Pinamonti <michele.pinamonti@gmail.com>
        * TtHFit.C: Fixed NtupleNameUp and Down option
        * All: Fixed NP names / titles in plots
        * HistoTools.C: Fixed issue with one-sided syst symmetrization
        * All: Fixed memory leak warnings
        * Common.C/h: overflow/underflow merged to firts/last bin when creating hist from ntup (solving warning from HistoTools)
        * TtHFit.C: Pruning plot added (created when the option "w" is used)
        
2015-07-24 Michele Pinamonti <michele.pinamonti@gmail.com>
        * All: added few options to config file
        * TtHFit.C: rebinning added for ntuple inputs
        
2015-07-03 Loic Valery <lvalery@cern.ch>
        * Disentangle S+B fit and CRonly/SR+CR fits

2015-07-01 Loic Valery <lvalery@cern.ch>
        * Change TthPlot to avoid nan problems when no data
        * Some cleaning in TthPlot
        * Fixed bug in post-fit NormFactor error propagation

2015-06-24 Michele Pinamonti <michele.pinamonti@gmail.com>
        * All: Minor fixes
        * Svn-Tagging: 00-00-02
        
2015-06-23 Loic Valery <lvalery@cern.ch>
        * Changing HistoChecks and preceeds it by corrections for null bins and weird systematics
        * Fix text color problems in HistoChecks

2015-06-18 Michele Pinamonti <michele.pinamonti@gmail.com>
        * All: Fix various warnings and printout reduced in case DEBUGLEVEL is set to 0
        * Svn-Tagging: 00-00-01
        
2015-06-15 Loic Valery <lvalery@cern.ch>
  	* Root/TtHFit.C: Adding the check of the histograms
	* Root/SampleHist.C: Adding post-smoothing check of the histograms

2015-06-12 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Root/TtHFit.C: table code fixed
        * Root/TtHFit.C, Root/FitResults.C: systematic pulls plot code moved to FitResults.C
        
2015-05-27 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Root/TtHFit.C, TtHFitter/TtHFit.h, util/myFit.C: CorrelationMatrix drawing command moved to myFit.C