@@ -2,7 +2,8 @@ Fit: "ttH2015"
   CmeLabel: "13 TeV"
   POI: "SigXsecOverSM"
   ReadFrom: NTUP
-  NtuplePaths: /gpfs/atlas/public/ttH_ntup2015/flatNtup_TTHBB/_L2/
+  NtuplePaths: "/gpfs/atlas/public/ttH_ntup2015/flatNtup_TTHBB_grid_v1.0/_L2/"
+%   NtuplePaths: "/gpfs/atlas/public/ttH_ntup2015/flatNtup_TTHBB/_L2/"
   Label: "Single Lepton"
   LumiLabel: "85 pb^{-1}"
   MCweight: "FinalWeight*weight_leptonSF*weight_bTagSF"
@@ -12,9 +13,11 @@ Fit: "ttH2015"
   NtupleName: "nominal"
   FitType: SPLUSB
   FitRegion: CRSR
+%   FitType: BONLY
+%   FitRegion: CRONLY
   DebugLevel: 0
   MCstatThreshold: 0.10
-%   SystControlPlots: TRUE
+  SystControlPlots: TRUE
   SystPruningShape: 0.01
   SystPruningNorm: 0.01
 %   CorrelationThreshold: 0.05
@@ -29,6 +32,7 @@ Region: "HThad_4j2b"; "HThad_5j2b"; "HThad_ge6j2b"
   ShortLabel: "4j,2b"; "5j,2b"; "#geq6j,2b"
   NtuplePathSuff: "4j2b"; "5j2b"; "ge6j2b"
   Binning: 100,150,200,250,300,350,400,450,500,550,600,650,700,800,1000,1600
+  BinWidth: 50
   
 Region: "HThad_4j3b"; "HThad_5j3b"; "HThad_ge6j3b"
   Type: CONTROL; CONTROL; SIGNAL
@@ -38,6 +42,7 @@ Region: "HThad_4j3b"; "HThad_5j3b"; "HThad_ge6j3b"
   ShortLabel: "4j,3b"; "5j,3b"; "#geq6j,3b"
   NtuplePathSuff: "4j3b"; "5j3b"; "ge6j3b"
   Binning: 100,200,300,400,500,600,700,800,1000,1600
+  BinWidth: 100
   
 Region: "HThad_4jge4b"; "HThad_5jge4b"; "HThad_ge6jge4b"
   Type: CONTROL; SIGNAL; SIGNAL
@@ -47,12 +52,14 @@ Region: "HThad_4jge4b"; "HThad_5jge4b"; "HThad_ge6jge4b"
   ShortLabel: "4j,#geq4b"; "5j,#geq4b"; "#geq6j,#geq4b"
   NtuplePathSuff: "4jge4b"; "5jge4b"; "ge6jge4b"
   Binning: 100,300,500,700,900,1100,1600
+  BinWidth: 200
   
 
 Sample: "Data"
   Title: "Data 2015"
   Type: DATA
   NtupleFile: "data"
+  NtuplePath: "/gpfs/atlas/public/ttH_ntup2015/flatNtup_TTHBB/_L2/"
 
 Sample: "ttH"
   Type: SIGNAL
@@ -69,19 +76,21 @@ Sample: "ttbar"
   LineColor: 1
   NtupleFile: "ttbar"
   
-% Sample: "wjets"
-%   Type: BACKGROUND
-%   Title: "W/Z + jets"
-%   FillColor: 92
-%   LineColor: 1
-%   NtupleFile: "wjets"
-%   
-% Sample: "zjets"
-%   Type: BACKGROUND
-%   Title: "W/Z + jets"
-%   FillColor: 95
-%   LineColor: 1
-%   NtupleFile: "zjets"
+Sample: "wjets"
+  Type: BACKGROUND
+  Title: "W + jets"
+  Group: "W/Z + jets"
+  FillColor: 92
+  LineColor: 1
+  NtupleFile: "wjets"
+  
+Sample: "zjets"
+  Type: BACKGROUND
+  Title: "Z + jets"
+  Group: "W/Z + jets"
+  FillColor: 95
+  LineColor: 1
+  NtupleFile: "zjets"
   
 Sample: "singleTop"
   Type: BACKGROUND
@@ -91,27 +100,34 @@ Sample: "singleTop"
   NtupleFile: "singleTop"
 
   
-% Systematic: "wjXsec"; "zjXsec"
-%   Title: "W+jets x-section" ; "Z+jets x-section" 
-%   Type: OVERALL
-%   OverallUp: 0.48
-%   OverallDown: -0.48
-%   Samples: wjets; zjets
-% 
-% Systematic: "wjNjets";  "zjNjets"
-%   Title: "W+jets Njets"; "Z+jets Njets" 
-%   Type: HISTO
-%   WeightSufUp: "(1+0.24*(jet_n-4))"
-%   WeightSufDown: "(1-0.24*(jet_n-4))"
-%   Samples: wjets; zjets
-%   Smoothing: 40
-
-Systematic: "ttHXsec"; "stXsec"
-  Title: "t#bar{t}H x-section"; "Single top x-section" 
+Systematic: "wjXsec"; "zjXsec"
+  Title: "W+jets x-section" ; "Z+jets x-section" 
   Type: OVERALL
-  OverallUp:    0.50;  0.05
-  OverallDown: -0.50; -0.04
-  Samples: ttH; singleTop
+  OverallUp: 0.48
+  OverallDown: -0.48
+  Samples: wjets; zjets
+
+Systematic: "wjNjets";  "zjNjets"
+  Title: "W+jets Njets"; "Z+jets Njets" 
+  Type: HISTO
+  WeightSufUp: "(1+0.24*(jet_n-4))"
+  WeightSufDown: "(1-0.24*(jet_n-4))"
+  Samples: wjets; zjets
+  Smoothing: 40
+
+% % Systematic: "ttHXsec"
+% %   Title: "t#bar{t}H x-section" 
+% %   Type: OVERALL
+% %   OverallUp:    0.50
+% %   OverallDown: -0.50
+% %   Samples: ttH
+  
+Systematic: "stXsec"
+  Title: "Single top x-section" 
+  Type: OVERALL
+  OverallUp:    0.05
+  OverallDown: -0.05
+  Samples: singleTop
 
 Systematic: "ttXsec"
   Title: "t#bar{t} x-section" 
@@ -129,6 +145,34 @@ Systematic: "JES_Scenario1_NP1";"JES_Scenario1_NP2";"JES_Scenario1_NP3"
   NtupleNameDown: "JET_NPScenario1_JET_GroupedNP_1__1down";"JET_NPScenario1_JET_GroupedNP_2__1down";"JET_NPScenario1_JET_GroupedNP_3__1down"
   Smoothing: 40
   Symmetrisation: TWOSIDED
+  
+Systematic: "JES_Scenario2_NP1";"JES_Scenario2_NP2";"JES_Scenario2_NP3"
+  Title: "JES NPScenario 2 - NP 1";"JES NPScenario 2 - NP 2";"JES NPScenario 2 - NP 3"
+  Type: HISTO
+  Samples: all
+  NtupleNameUp: "JET_NPScenario2_JET_GroupedNP_1__1up";"JET_NPScenario2_JET_GroupedNP_2__1up";"JET_NPScenario2_JET_GroupedNP_3__1up"
+  NtupleNameDown: "JET_NPScenario2_JET_GroupedNP_1__1down";"JET_NPScenario2_JET_GroupedNP_2__1down";"JET_NPScenario2_JET_GroupedNP_3__1down"
+  Smoothing: 40
+  Symmetrisation: TWOSIDED
+  
+Systematic: "JES_Scenario3_NP1";"JES_Scenario3_NP2";"JES_Scenario3_NP3"
+  Title: "JES NPScenario 3 - NP 1";"JES NPScenario 3 - NP 2";"JES NPScenario 3 - NP 3"
+  Type: HISTO
+  Samples: all
+  NtupleNameUp: "JET_NPScenario3_JET_GroupedNP_1__1up";"JET_NPScenario3_JET_GroupedNP_2__1up";"JET_NPScenario3_JET_GroupedNP_3__1up"
+  NtupleNameDown: "JET_NPScenario3_JET_GroupedNP_1__1down";"JET_NPScenario3_JET_GroupedNP_2__1down";"JET_NPScenario3_JET_GroupedNP_3__1down"
+  Smoothing: 40
+  Symmetrisation: TWOSIDED
+  
+Systematic: "JES_Scenario4_NP1";"JES_Scenario4_NP2";"JES_Scenario4_NP3"
+  Title: "JES NPScenario 4 - NP 1";"JES NPScenario 4 - NP 2";"JES NPScenario 4 - NP 3"
+  Type: HISTO
+  Samples: all
+  NtupleNameUp: "JET_NPScenario4_JET_GroupedNP_1__1up";"JET_NPScenario4_JET_GroupedNP_2__1up";"JET_NPScenario4_JET_GroupedNP_3__1up"
+  NtupleNameDown: "JET_NPScenario4_JET_GroupedNP_1__1down";"JET_NPScenario4_JET_GroupedNP_2__1down";"JET_NPScenario4_JET_GroupedNP_3__1down"
+  Smoothing: 40
+  Symmetrisation: TWOSIDED
+
 
 Systematic: "JER"
   Title: "JER"
@@ -208,5 +252,40 @@ Systematic: "BTag_Extrapolation"; "BTag_ExtrapolationFromCharm"
   Type: HISTO
   Samples: all
   WeightSufDown: "weight_bTagSF_extrapolation_down/weight_bTagSF"; "weight_bTagSF_extrapolation_from_charm_down/weight_bTagSF"
+  Smoothing: 40
+  Symmetrisation: ONESIDED
+
+  
+Systematic: "tt_Rad_HiLow"
+  Title: "t#bar{t} Radiation"
+  Type: HISTO
+  Samples: ttbar
+%   NtupleFileSufUp: "_radHi"
+  NtupleFileSufDown: "_radLo"
+  Smoothing: 40
+%   Symmetrisation: TWOSIDED
+  Symmetrisation: ONESIDED
+
+Systematic: "tt_Shower"
+  Title: "t#bar{t} Parton Shower"
+  Type: HISTO
+  Samples: ttbar
+  NtupleFileSufUp: "_pyt8"
+  Smoothing: 40
+  Symmetrisation: ONESIDED
+
+Systematic: "tt_Shower2"
+  Title: "t#bar{t} Parton Shower (2)"
+  Type: HISTO
+  Samples: ttbar
+  NtupleFileSufUp: "_herpp"
+  Smoothing: 40
+  Symmetrisation: ONESIDED
+
+Systematic: "tt_MC"
+  Title: "t#bar{t} NLO Generator"
+  Type: HISTO
+  Samples: ttbar
+  NtupleFileSufUp: "_amcatnlo"
   Smoothing: 40
   Symmetrisation: ONESIDED
